==> zip1982b/termostat/main/ds2482.c <==
#include <stdio.h>
#include "ds2482.h"

uint8_t calc_crc8(uint8_t value)
{
	crc8 = crc_tbl[crc8 ^ value];
	return crc8;
}

uint8_t OWReset(void)
{
	/*
	 * S AD,0 [A] 1WRS [A] P S AD,1 [A] [Status] A [Status] A\ P
	 *									\--------/
	 *						Repeat until 1WB bit has changed to 0
	*/
	uint8_t status = 0;
	uint8_t *st;
	uint8_t PPD;
	int poll_count = 0;
	
	st = &status;
	
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	i2c_master_start(cmd);  //S
	i2c_master_write_byte(cmd, DS2482_ADDR << 1 | WRITE_BIT, ACK_CHECK_EN); //AD,0  - [A]
	i2c_master_write_byte(cmd, CMD_1WRS, ACK_CHECK_EN); //1WRS - [A]
	i2c_master_stop(cmd); // P
	esp_err_t ret = i2c_master_cmd_begin(I2C_MASTER_NUM, cmd, 1000 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);
	switch(ret){
		case ESP_OK:
			printf("[OWReset()] - CMD_1WRS = OK \n");
			break;
		case ESP_ERR_INVALID_ARG:
			printf("[OWReset()] - Parameter error (1) \n");
			return 0;
		case ESP_FAIL:
			printf("[OWReset()] - Sending command error, slave doesn`t ACK the transfer \n");
			return 0;
		case ESP_ERR_INVALID_STATE:
			printf("[OWReset()] - i2c driver not installed or not in master mode \n");
			return 0;
		case ESP_ERR_TIMEOUT:
			printf("[OWReset()] - Operation timeout because the bus is busy \n");
			return 0;
		default:
			printf("[OWReset()] - default block");
			return 0;
	}
	cmd = i2c_cmd_link_create(); 
	i2c_master_start(cmd); //S
	i2c_master_write_byte(cmd, DS2482_ADDR << 1 | READ_BIT, ACK_CHECK_EN); //AD,1  - [A]
	do
	{
		i2c_master_read_byte(cmd, st, ACK_VAL); //[Status] A
	}
	while ((*st & STATUS_1WB) && (poll_count++ < POLL_LIMIT)); //Repeat untill 1WB bit has changed to 0
	i2c_master_read_byte(cmd, st, NACK_VAL); //[Status] notA
	i2c_master_stop(cmd); // P
	ret = i2c_master_cmd_begin(I2C_MASTER_NUM, cmd, 1000 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);
	switch(ret){
		case ESP_OK:
			if(*st & STATUS_PPD)
			{
				PPD = 1;
			}
			else
			{
				PPD = 0;
			}
			
			if(*st & STATUS_SD)
			{
				short_detected = 1;
				printf("[OWReset()] - SD = %d \n", short_detected);
			}
			else
			{
				short_detected = 0;
				printf("[OWReset()] - SD = %d \n", short_detected);
			}
			break;
		case ESP_ERR_INVALID_ARG:
			printf("[OWReset()] - Parameter error (2) \n");
			return 0;
		case ESP_FAIL:
			printf("[OWReset()] - Sending command error, slave doesn`t ACK the transfer \n");
			return 0;
		case ESP_ERR_INVALID_STATE:
			printf("[OWReset()] - i2c driver not installed or not in master mode \n");
			return 0;
		case ESP_ERR_TIMEOUT:
			printf("[OWReset()] - Operation timeout because the bus is busy \n");
			return 0;
		default:
			printf("[OWReset()] - default block");
			return 0;
	}
	
	if(poll_count >= POLL_LIMIT)
	{
		DS2482_reset();
		return 0;
	}
	
	if(PPD)
		return 1;
	else
		return 0;
}

uint8_t OWTouchBit(uint8_t sendbit)
{
	/*
	 * S AD,0 [A] 1WSB [A] BB [A] P S AD,1 [A] [Status] A [Status] A\ P
	 *											\--------/
	 *							Repeat until 1WB bit has changed to 0
	 * BB indicates byte containing bit value in msbit
	*/
	uint8_t status = 0;
	uint8_t *st;
	int poll_count = 0;
	
	st = &status;
	
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	i2c_master_start(cmd);  //S
	i2c_master_write_byte(cmd, DS2482_ADDR << 1 | WRITE_BIT, ACK_CHECK_EN); //AD,0  - [A]
	i2c_master_write_byte(cmd, CMD_1WSB, ACK_CHECK_EN); //1WSB - [A]
	i2c_master_write_byte(cmd, sendbit ? 0x80 : 0x00, ACK_CHECK_EN); //BB - [A]
	i2c_master_stop(cmd); // P
	esp_err_t ret = i2c_master_cmd_begin(I2C_MASTER_NUM, cmd, 1000 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);
	switch(ret){
		case ESP_OK:
			printf("[OWTouchBit()] - CMD_1WSB = OK \n");
			break;
		case ESP_ERR_INVALID_ARG:
			printf("[OWTouchBit()] - Parameter error (1) \n");
			return 0;
		case ESP_FAIL:
			printf("[OWTouchBit()] - Sending command error, slave doesn`t ACK the transfer \n");
			return 0;
		case ESP_ERR_INVALID_STATE:
			printf("[OWTouchBit()] - i2c driver not installed or not in master mode \n");
			return 0;
		case ESP_ERR_TIMEOUT:
			printf("[OWTouchBit()] - Operation timeout because the bus is busy \n");
			return 0;
		default:
			printf("[OWTouchBit()] - default block");
			return 0;
	}
	cmd = i2c_cmd_link_create();
	i2c_master_start(cmd); //S
	i2c_master_write_byte(cmd, DS2482_ADDR << 1 | READ_BIT, ACK_CHECK_EN); //AD,1  - [A]
	do
	{
		i2c_master_read_byte(cmd, st, ACK_VAL); //[Status] A
	}
	while ((*st & STATUS_1WB) && (poll_count++ < POLL_LIMIT)); //Repeat until 1WB bit has changed to 0
	i2c_master_read_byte(cmd, st, NACK_VAL); //[Status] notA
	i2c_master_stop(cmd); // P
	ret = i2c_master_cmd_begin(I2C_MASTER_NUM, cmd, 1000 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);
	switch(ret){
		case ESP_OK:
			printf("[OWTouchBit()] - *st = %d \n", *st);
			break;
		case ESP_ERR_INVALID_ARG:
			printf("[OWTouchBit()] - Parameter error (2) \n");
			return 0;
		case ESP_FAIL:
			printf("[OWTouchBit()] - Sending command error, slave doesn`t ACK the transfer \n");
			return 0;
		case ESP_ERR_INVALID_STATE:
			printf("[OWTouchBit()] - i2c driver not installed or not in master mode \n");
			return 0;
		case ESP_ERR_TIMEOUT:
			printf("[OWTouchBit()] - Operation timeout because the bus is busy \n");
			return 0;
		default:
			printf("[OWTouchBit()] - default block");
			return 0;
	}
	
	if(poll_count >= POLL_LIMIT)
	{
		DS2482_reset();
		return 0;
	}
	
	if(*st & STATUS_SBR)
		return 1;
	else
		return 0;
}

void OWWriteByte(uint8_t sendbyte)
{
	/**
	* S AD,0 [A] 1WWB [A] DD [A] P S AD,1 [A] [Status] A [Status] A\ P
	*										  \---------/
	*								Repeat until 1WB bit has changed to 0
	* DD data to write
	*/
	uint8_t status;
	int poll_count = 0;
	uint8_t *st;
	st = &status;
	
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	i2c_master_start(cmd);  //S
	i2c_master_write_byte(cmd, DS2482_ADDR << 1 | WRITE_BIT, ACK_CHECK_EN); //AD,0  - [A]
	i2c_master_write_byte(cmd, CMD_1WWB, ACK_CHECK_EN); //1WWB - [A]
	i2c_master_write_byte(cmd, sendbyte, ACK_CHECK_EN); //DD - [A]
	i2c_master_stop(cmd); // P
	esp_err_t ret = i2c_master_cmd_begin(I2C_MASTER_NUM, cmd, 1000 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);
	switch(ret){
		case ESP_OK:
			printf("[OWWriteByte()] - CMD_1WWB = OK \n");
			break;
		case ESP_ERR_INVALID_ARG:
			printf("[OWWriteByte()] - Parameter error (1) \n");
			break;
		case ESP_FAIL:
			printf("[OWWriteByte()] - Sending command error, slave doesn`t ACK the transfer \n");
			break;
		case ESP_ERR_INVALID_STATE:
			printf("[OWWriteByte()] - i2c driver not installed or not in master mode \n");
			break;
		case ESP_ERR_TIMEOUT:
			printf("[OWWriteByte()] - Operation timeout because the bus is busy \n");
			break;
		default:
			printf("[OWWriteByte()] - default block\n");
	}
	vTaskDelay(30 / portTICK_RATE_MS);
	cmd = i2c_cmd_link_create();
	i2c_master_start(cmd); //S
	i2c_master_write_byte(cmd, DS2482_ADDR << 1 | READ_BIT, ACK_CHECK_EN); //AD,1  - [A]
	do
	{
		i2c_master_read_byte(cmd, st, ACK_VAL); //[Status] A
	}
	while ((*st & STATUS_1WB) && (poll_count++ < POLL_LIMIT)); //Repeat until 1WB bit has changed to 0
	i2c_master_read_byte(cmd, st, NACK_VAL); //[Status] notA
	i2c_master_stop(cmd); // P
	ret = i2c_master_cmd_begin(I2C_MASTER_NUM, cmd, 1000 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);
	switch(ret){
		case ESP_OK:
			//printf("[OWWriteByte()] - *st = %d \n", *st);
			break;
		case ESP_ERR_INVALID_ARG:
			printf("[OWWriteByte()] - Parameter error (2) \n");
			break;
		case ESP_FAIL:
			printf("[OWWriteByte()] - Sending command error, slave doesn`t ACK the transfer \n");
			break;
		case ESP_ERR_INVALID_STATE:
			printf("[OWWriteByte()] - i2c driver not installed or not in master mode \n");
			break;
		case ESP_ERR_TIMEOUT:
			printf("[OWWriteByte()] - Operation timeout because the bus is busy \n");
			break;
		default:
			printf("[OWWriteByte()] - default block");
	}
	
	if(poll_count >= POLL_LIMIT)
	{
		DS2482_reset();
	}
}

uint8_t OWReadByte(void)
{
	/*
	* S AD,0 [A] 1WRB [A] P -idle- S AD,0 [A] SRP [A] E1 [A] S AD,1 [A] DD A\ P
	* 								 
	*						
	* DD - read data
	*
	*
	*
	*/
	uint8_t data;
	
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	i2c_master_start(cmd);  //S
	i2c_master_write_byte(cmd, DS2482_ADDR << 1 | WRITE_BIT, ACK_CHECK_EN); //AD,0  - [A]
	i2c_master_write_byte(cmd, CMD_1WRB, ACK_CHECK_EN); //1WRB - [A]
	i2c_master_stop(cmd); // P
	esp_err_t ret = i2c_master_cmd_begin(I2C_MASTER_NUM, cmd, 1000 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);
	switch(ret){
		case ESP_OK:
			printf("[OWReadByte()] - CMD_1WRB = OK \n");
			break;
		case ESP_ERR_INVALID_ARG:
			printf("[OWReadByte()] - Parameter error (1) \n");
			break;
		case ESP_FAIL:
			printf("[OWReadByte()] - Sending command error, slave doesn`t ACK the transfer \n");
			break;
		case ESP_ERR_INVALID_STATE:
			printf("[OWReadByte()] - i2c driver not installed or not in master mode \n");
			break;
		case ESP_ERR_TIMEOUT:
			printf("[OWReadByte()] - Operation timeout because the bus is busy \n");
			break;
		default:
			printf("[OWReadByte()] - default block\n");
	}		
	cmd = i2c_cmd_link_create();		
	i2c_master_start(cmd);  //S
	i2c_master_write_byte(cmd, DS2482_ADDR << 1 | WRITE_BIT, ACK_CHECK_EN); //AD,0  - [A]
	i2c_master_write_byte(cmd, CMD_SRP, ACK_CHECK_EN); //SRP - [A]
	i2c_master_write_byte(cmd, 0xE1, ACK_CHECK_EN); //E1h - [A]
	
	i2c_master_start(cmd);  //S
	i2c_master_write_byte(cmd, DS2482_ADDR << 1 | READ_BIT, ACK_CHECK_EN); //AD,1  - [A]
	i2c_master_read_byte(cmd, &data, NACK_VAL); //[DD] notA
	i2c_master_stop(cmd); // P
	ret = i2c_master_cmd_begin(I2C_MASTER_NUM, cmd, 1000 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);
	switch(ret){
		case ESP_OK:
			//printf("[OWReadByte()] - data = %d \n", data);
			break;
		case ESP_ERR_INVALID_ARG:
			printf("[OWReadByte()] - Parameter error (2) \n");
			break;
		case ESP_FAIL:
			printf("[OWReadByte()] - Sending command error, slave doesn`t ACK the transfer \n");
			break;
		case ESP_ERR_INVALID_STATE:
			printf("[OWReadByte()] - i2c driver not installed or not in master mode \n");
			break;
		case ESP_ERR_TIMEOUT:
			printf("[OWReadByte()] - Operation timeout because the bus is busy \n");
			break;
		default:
			printf("[OWReadByte()] - default block");
	}
	return data;
}

uint8_t OWSearch(uint8_t *ld, uint8_t *lfd, uint8_t *ldf) //, uint8_t *ROM_NO
{
	int id_bit; // 
	int cmp_id_bit; // the complement of the id_bit. This bit is AND of the complement of all of the id_bit_number
					// bits of the devices that are still participating in the search. 
	
	uint8_t search_direction; // бит, указывающий направление поиска.
							  // Все устройства с этим битом остаются в поиске, а остальные переходят в состояние ожидания для 1-проводного сброса.

	uint8_t status;
	
	// initialize for search
	int id_bit_number = 1; // бит ROM с номером 1 - 64, который в настоящее время выполняется.
	int last_zero = 0; // разрядная позиция последнего нуля, записанная там, где имело место несоответствие
	int rom_byte_number = 0; // 
	uint8_t search_result = 0; //False or True
	uint8_t rom_byte_mask = 1;
	
	crc8 = 0;
	
	//printf("address memory ROM_NO = %p\n", ROM_NO);
	//printf("*ld value = %d\n", *ld);
	//printf("*lfd value = %d\n", *lfd);
	//printf("*ldf value = %d\n", *ldf);
	
	// if the last call was not the last one 
	if (!*ldf)
	{
		// 1-wire reset
		if (!OWReset())
		{
			// reset the search
			*ld = 0;
			*ldf = 0;
			*lfd = 0;
			return 0;
			
		}
		vTaskDelay(250 / portTICK_RATE_MS);
		// issue the search command
		// выдать команду поиска
		OWWriteByte(SearchROM); // 0xF0
		
		// loop to do the search
		// Цикл поиска
		do
		{
			if(id_bit_number < *ld)
			{
				if((ROM_NO[rom_byte_number] & rom_byte_mask) > 0)
					search_direction = 1;
				else
					search_direction = 0;
			}
			else
			{
				// if equal to last pick 1, if not then pick 0
				if(id_bit_number == *ld)
					search_direction = 1;
				else
					search_direction = 0;
			}
			
			
			// Perform a triple operation on the ds2482 which will perform
			// 2 read bits and 1 write bit
			status = DS2482_search_triplet(search_direction);
			
			//check bit results in status byte
			id_bit = ((status & STATUS_SBR) == STATUS_SBR);
			cmp_id_bit = ((status & STATUS_TSB) == STATUS_TSB);
			search_direction = ((status & STATUS_DIR) == STATUS_DIR) ? (uint8_t)1 : (uint8_t)0;
			
			// check for no devices on 1-wire
			if((id_bit) && (cmp_id_bit))
				break;
			else
			{
				if((!id_bit) && (!cmp_id_bit) && (search_direction == 0))
				{
					last_zero = id_bit_number;
					//printf("id_bit_number = %d\n", id_bit_number);
					
					// check for last discrepancy in family
					if(last_zero < 9)
						*lfd = last_zero;
				}
				
				// set or clear  the bit in the ROM byte rom_byte_number
				// with mask rom_byte_mask
				if(search_direction == 1)
					ROM_NO[rom_byte_number] |= rom_byte_mask;
				else
					ROM_NO[rom_byte_number] &= ~rom_byte_mask;
				
				// increment the byte counter id_bit_number
				// and shift the mask rom_byte_mask
				id_bit_number++;
				rom_byte_mask <<= 1;
				
				// if the mask is 0 then go to new SerialNum byte rom_byte_number
				// and reset mask
				if (rom_byte_mask == 0)
				{
					calc_crc8(ROM_NO[rom_byte_number]); // accumulate the CRC
					rom_byte_number++;
					rom_byte_mask = 1;
				}
			}
		}
		while(rom_byte_number < 8);  // loop until through all ROM byte 0-7
		
		// if the search was successful then
		if(!((id_bit_number < 65) || (crc8 != 0)))
		{
			// search successful so set LastDiscrepancy, LastDeviceFlag
			// search_result
			//printf("last_zero = %d\n", last_zero);
			*ld = last_zero;
			
			//check for last device
			if(*ld == 0)
				*ldf = 1;
			
			search_result = 1;
		}	
	}
	
	// if no device found then reset counters so next
	// 'search' will be like a first
	
	if(!search_result || (ROM_NO[0] == 0))
	{
		*ld = 0;
		*ldf = 0;
		*lfd = 0;
		search_result = 0;
	}
	
	return search_result; //False or True
}
